--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Zadanie</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script src="index.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="header">Zadanie Rekrutacje</h1>
-        <div class="container">
-            <ul class="list">
-            </ul>
-        </div>
-</body>
+    <div class="container"><ul class="list"></ul></div>
+  </body>
 </html>
